modules/kong/sample-routes/sample-user-api-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: users-route
  namespace: applications
spec:
  parentRefs:
  - name: kong
    namespace: kong
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /users
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: sample-users-api
      port: 80
